fixed toolbar alignment

--- a/www/framework/Cms/sass/interface.scss
+++ b/www/framework/Cms/sass/interface.scss
@@ -409,6 +409,7 @@ select,
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            line-height: 20px;
 
             &.icon-user,
             &.icon-help,
@@ -540,6 +541,9 @@ select,
             display: block;
             @include box-shadow(0 2px 0.2em 0 #aaaaaa);
         }
+    }
+    h1 {
+        margin-top: 1px;
     }
     h1,
     a,
